--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MyRunningPlayGround</string>
+    <string name="google_api_key">AIzaSyCE2VV-Gj0H6fxqICbW_GAodV-80cmcW90</string>
 </resources>
